--- a/public/index.html
+++ b/public/index.html
@@ -19,17 +19,20 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <script>(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(d.href.indexOf("http")||~d.href.indexOf(e.host))&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone")</script>
-
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
-
+    <!-- core libs -->    
     <script src="javascripts/helper.js"></script>
     <script src="javascripts/modernizr-2.6.1.min.js"></script>
-
     <script src="javascripts/jquery.js"></script>
     <script src="javascripts/underscore.js"></script>
     <script src="javascripts/backbone.js"></script>   
     <script src="javascripts/backbone.marionette.js"></script>   
+    <!-- mobile specific -->
+    <script src="javascripts/iscroll-lite.js"></script>
+    <script src="javascripts/hammer.js"></script>
+    <script src="javascripts/jquery.hammer.js"></script>
+    <!-- bbm specific -->
     <script src="../lib/backbone.mobile.js"></script>   
   </head>
   <body>
