working on getting app init rolling

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,10 @@
     <script src="javascripts/jquery.hammer.js"></script>
     <!-- bbm specific -->
     <script src="../lib/backbone.mobile.js"></script>   
+    <!-- demo app -->
+    <script src="javascripts/app.js"></script>   
   </head>
   <body>
+    <div id="app"></div>
   </body>
 </html>
