getting app to boot

--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,8 @@
   </head>
   <body>
     <div id="app"></div>
-  </body>
+  </body>  
+  <script type="text/javascript" charset="utf-8">
+    $(function(){ App.start() })
+  </script>
 </html>
