separated out body header/footer css

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
   <body>
     <div id="app">
       <div class='fixed-header'>Head</div>
-      <div class='scroll-body'>
+      <div class='scroll-body has-header has-footer'>
         <p>
           Here stuff......
           <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
