reverted to iscroll

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <script src="javascripts/backbone.js"></script>   
     <script src="javascripts/backbone.marionette.js"></script>   
     <!-- mobile specific -->
-    <script src="javascripts/iscroll-lite.js"></script>
+    <script src="javascripts/iscroll.js"></script>
     <script src="javascripts/hammer.js"></script>
     <script src="javascripts/jquery.hammer.js"></script>
     <!-- bbm specific -->
@@ -43,34 +43,6 @@
     <div id="app">
       <div class='fixed-header'>Head</div>
       <div class='scroll-body has-header has-footer'>
-        <p>
-          Here stuff......
-          <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
-        </p>
-        <p>
-          Here stuff......
-          <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
-        </p>
-        <p>
-          Here stuff......
-          <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
-        </p>
-        <p>
-          Here stuff......
-          <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
-        </p>
-        <p>
-          Here stuff......
-          <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
-        </p>
-        <p>
-          Here stuff......
-          <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
-        </p>
-        <p>
-          Here stuff......
-          <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
-        </p>
         <p>
           Here stuff......
           <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
