--- a/public/index.html
+++ b/public/index.html
@@ -41,29 +41,33 @@
   </head>
   <body>
     <div id="app">
-      <div class='fixed-header'>Head</div>
-      <div class='scroll-body has-header has-footer'>
-        <p>
-          Here stuff......
-          <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
-        </p>
-        <p>
-          Here stuff......
-          <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
-        </p>
-        <p>
-          Here stuff......
-          <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
-        </p>
-        <p>
-          Here stuff......
-          <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
-        </p>
-      </div>
-      <div class='fixed-footer'><h1>Footer</h1></div>
     </div>
   </body>  
   <script type="text/javascript" charset="utf-8">
     $(function(){ App.start() })
   </script>
+  <div id="home">
+    <div class='fixed-header'>Head</div>
+    <div id='scroller' class='scroll-body has-header has-footer'>
+      <div class='scroller'>
+      <p>
+        Here stuff......
+        <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
+      </p>
+      <p>
+        Here stuff......
+        <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
+      </p>
+      <p>
+        Here stuff......
+        <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
+      </p>
+      <p>
+        Here stuff......
+        <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
+      </p>
+      </div>
+    </div>
+    <div class='fixed-footer'><h1>Footer</h1></div>    
+  </div>
 </html>
