--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <script>(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(d.href.indexOf("http")||~d.href.indexOf(e.host))&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone")</script>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/app.css">
@@ -43,29 +44,19 @@
     <div id="app" class='iscroll-enabled'>
     </div>
   </body>  
-  <script type="text/javascript" charset="utf-8">
-    $(function(){ App.start() })
+  <script type="text/template" id="m-listItem-template">
+    <div id="m-list-item-template-root">
+      <ul id="scroller-content">
+      </div>
+    </div>
+  </script>
+  <script type="text/template" id="m-todoItem-template">
+    <div><%= name %> - <%= priority %></div>
   </script>
   <div id="home" style='display: none;'>
     <div class='fixed-header'>Head</div>
     <div id='scroller' class='scroll-body has-header has-footer'>
       <div class='scroller'>
-      <p>
-        Here stuff......
-        <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
-      </p>
-      <p>
-        Here stuff......
-        <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
-      </p>
-      <p>
-        Here stuff......
-        <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
-      </p>
-      <p>
-        Here stuff......
-        <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
-      </p>
       </div>
     </div>
     <div class='fixed-footer'>Footer</div>    
