--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <script>(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(d.href.indexOf("http")||~d.href.indexOf(e.host))&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone")</script>
-    <link rel="stylesheet" href="css/reset.css">
+    <!-- <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/ratchet.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/app.css"> -->
+    <link rel="stylesheet" href="css/ratchet.css">
 
     <!-- core libs -->    
     <script src="javascripts/modernizr-2.6.1.min.js"></script>
@@ -43,18 +43,63 @@
     <script src="javascripts/app.js"></script>   
   </head>
   <body>
-    <div id="app">
-    </div>
-    <div class='fixed-footer'>
-      <a href='#tasks'>Tasks</a>
-    </div>    
+    <div id='app'></div>
   </body>  
+
+  <script type="text/template" id="todos">  
+    <header class="bar-title">
+      <a class="button" href="#">
+        Left
+      </a>
+      <h1 class="title">Title</h1>
+      <a class="button" href="#">
+        Right
+      </a>
+    </header>
+    <nav class="bar-tab">
+      <ul class="tab-inner">
+        <li class="tab-item">
+          <a href="">
+            <img class="tab-icon" src="img/icon-home.png">
+            <div class="tab-label">Home</div>
+          </a>
+        </li>
+        <li class="tab-item">
+          <a href="">
+            <img class="tab-icon" src="img/icon-profile.png">
+            <div class="tab-label">Contacts</div>
+          </a>
+        </li>
+        <li class="tab-item active">
+          <a href="">
+            <img class="tab-icon" src="img/icon-messages.png">
+            <div class="tab-label">Tasks</div>
+          </a>
+        </li>
+        <li class="tab-item">
+          <a href="">
+            <img class="tab-icon" src="img/icon-hamburger.png">
+            <div class="tab-label">Label</div>
+          </a>
+        </li>
+        <li class="tab-item">
+          <a href="">
+            <img class="tab-icon" src="img/icon-settings.png">
+            <div class="tab-label">Settings</div>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <div class='content'>
+      <ul class="list"></ul>   
+    </div>
+  </script>
   <script type="text/template" id="m-listItem-template">
     <div id="pullDown" style='display: none'>
       <span class="pullDownIcon"></span><span class="pullDownLabel">Pull down to refresh...</span>
     </div>
     <div id="m-list-item-template-root">
-      <ul id="scroller-content">
+      <ul id="scroller-content" class="list">
       </ul>
     </div>
   </script>
@@ -63,7 +108,7 @@
       <%= name %>
     </a>
   </script>
-  <script type="text/template" id="todos">
+  <script type="text/template" id="todos_old">
     <div class='fixed-header header'><h1 class='title'>Todos</h1></div>
     <div id="wrapper" class='scroll-body can-scroll has-header has-footer'>
       <div id='scroller'>      
@@ -74,7 +119,9 @@
   </script>
   <script type="text/template" id="todos_show">
     <div class='fixed-header header'>
-      <a href="#">Back</a>   
+      <a class="button-prev" href="#">
+        Back
+      </a>
       <h1 class='title'>Todo Show</h1></div>
       <a href="#/tasks/<%= id %>/edit">Edit</a>      
     </div>
